fix: unexpected overlapping

--- a/common/style.css
+++ b/common/style.css
@@ -197,7 +197,7 @@ div.player_container div.detailed_modal {
   height: 90vh;
   top: 100vh;
   background-color: #333333;
-  z-index: 1;
+  z-index: 2;
   transition: top 0.3s;
   overflow-y: scroll;
 }
